# uniseg

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bench_test.go  doc.go  eastasianwidth.go  emojipresentation.go  example_test.go  examples_test.go  gen_breaktest.go  gen_graphemeproperties.go  gen_properties.go  go.mod  grapheme.go  grapheme_break_test.go  grapheme_test.go  graphemebreak_test.go  graphemeproperties.go  graphemerules.go  line.go  line_test.go  linebreak_test.go  lineproperties.go  linerules.go  properties.go  properties_test.go  sentence.go  sentence_test.go  sentencebreak_test.go  sentenceproperties.go  sentencerules.go  step.go  step_test.go  width.go  width_test.go  word.go  word_test.go  wordbreak_test.go  wordbreakproperties.go  (+3 more)
.github/workflows/: test.yml
